--- a/index.html
+++ b/index.html
@@ -25,49 +25,41 @@
 <body>
 	<div class="container">
 		<h2>Select Multiple Images</h2>
+		<div class="row">
+			<div class="col-sm-4">
+		        <img id="1" src="images/image1.jpg" />
+			</div>
+			<div class="col-sm-4">
+		        <img id="2" src="images/image2.jpg" />
+			</div>
+			<div class="col-sm-4">
+		        <img id="3" src="images/image3.png" />
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4">
+		        <img id="4" src="images/image4.png" />
+			</div>
+			<div class="col-sm-4">
+		        <img id="5" src="images/image5.png" />
+			</div>
+			<div class="col-sm-4">
+		        <img id="6" src="images/image6.png" />
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4">
+		        <img id="7" src="images/image7.png" />
+			</div>
+			<div class="col-sm-4">
+		        <img id="8" src="images/image8.png" />
+			</div>
+			<div class="col-sm-4">
+		        <img id="9" src="images/image9.png" />
+			</div>
+		</div>
 		<form>
-			<div class="row">
-				<div class="col-sm-4">
-			        <img data-id="1" src="images/image1.jpg" />
-			        <input type="hidden" name="images[]" />
-				</div>
-				<div class="col-sm-4">
-			        <img data-id="2" src="images/image2.jpg" />
-			        <input type="hidden" name="images[]" />
-				</div>
-				<div class="col-sm-4">
-			        <img data-id="3" src="images/image3.png" />
-			        <input type="hidden" name="images[]" />
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-4">
-			        <img data-id="4" src="images/image4.png" />
-			        <input type="hidden" name="images[]" />
-				</div>
-				<div class="col-sm-4">
-			        <img data-id="5" src="images/image5.png" />
-			        <input type="hidden" name="images[]" />
-				</div>
-				<div class="col-sm-4">
-			        <img data-id="6" src="images/image6.png" />
-			        <input type="hidden" name="images[]" />
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-4">
-			        <img data-id="7" src="images/image7.png" />
-			        <input type="hidden" name="images[]" />
-				</div>
-				<div class="col-sm-4">
-			        <img data-id="8" src="images/image8.png" />
-			        <input type="hidden" name="images[]" />
-				</div>
-				<div class="col-sm-4">
-			        <img data-id="9" src="images/image9.png" />
-			        <input type="hidden" name="images[]" />
-				</div>
-			</div>
+			<input  name="images" id="images">
 			<center style="padding: 30px">
 				<input type="submit" value="submit" />
 			</center>
@@ -79,10 +71,12 @@
 		    var $this = $(this);
 		    $this.toggleClass('selected');
 		    
-		    if($this.hasClass('selected'))
-		        $this.next().val('1')
-		    else
-		        $this.next().val('');
+		    if($this.hasClass('selected')) {
+		        $('#images').val($('#images').val() + $this.attr('id') + ' ');
+		    }
+		    else {
+		        $('#images').val($('#images').val().replace($this.attr('id')+' ',''));
+		    }
 		});
 	</script>
 
