--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</div>
 		</div>
 		<form>
-			<input  name="images" id="images">
+			<input type="hidden" name="images" id="images">
 			<center style="padding: 30px">
 				<input type="submit" value="submit" />
 			</center>
